// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return idcc results for boulangerie 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "14",
      "_index": "cdtn_test_documents",
      "_score": 13.44666,
      "_source": Object {
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "idcc": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "13",
      "_index": "cdtn_test_documents",
      "_score": 12.343299,
      "_source": Object {
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "idcc": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 13.44666,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;


exports[`return idcc results for pati 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "14",
      "_index": "cdtn_test_documents",
      "_score": 13.333527,
      "_source": Object {
        "effectif": 134889,
        "id": "KALICONT000005635886",
        "idcc": 843,
        "shortTitle": "Boulangerie-pâtisserie (entreprises artisanales)",
        "slug": "843-boulangerie-patisserie-entreprises-artisanales",
        "title": "Convention collective nationale de la boulangerie-pâtisserie du 19 mars 1976.  Etendue par arrêté du 21 juin 1978 JONC 28 juillet 1978.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635886",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "13",
      "_index": "cdtn_test_documents",
      "_score": 12.2301655,
      "_source": Object {
        "effectif": 44699,
        "id": "KALICONT000005635691",
        "idcc": 1747,
        "shortTitle": "Activités industrielles de boulangerie et pâtisserie",
        "slug": "1747-activites-industrielles-de-boulangerie-et-patisserie",
        "title": "Convention collective nationale des activités industrielles de boulangerie et pâtisserie du 13 juillet 1993. Mise à jour par avenant n°10 du 11 octobre 2011.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635691",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 13.333527,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;

exports[`return idcc results in correct order for banque 1`] = `
Object {
  "hits": Array [
    Object {
      "_id": "16",
      "_index": "cdtn_test_documents",
      "_score": 14.131623,
      "_source": Object {
        "effectif": 216431,
        "id": "KALICONT000005635780",
        "idcc": 2120,
        "shortTitle": "Banque",
        "slug": "2120-banque",
        "title": "Convention collective nationale de la banque du 10 janvier 2000.  Etendue par arrêté du 17 novembre 2004 JORF 11 décembre 2004.",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000005635780",
      },
      "_type": "_doc",
    },
    Object {
      "_id": "15",
      "_index": "cdtn_test_documents",
      "_score": 7.7080503,
      "_source": Object {
        "effectif": 219,
        "id": "KALICONT000023973390",
        "idcc": 2701,
        "shortTitle": "Banque : personnel des banques de la Guyane",
        "slug": "2701-banque-personnel-des-banques-de-la-guyane",
        "title": "Convention collective du travail du personnel des banques de la Guyane du 18 décembre 2007",
        "url": "https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=KALICONT000023973390",
      },
      "_type": "_doc",
    },
  ],
  "max_score": 14.131623,
  "total": Object {
    "relation": "eq",
    "value": 2,
  },
}
`;
